objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>LeadSrcTest</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Demo Performed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Scheduled Demo</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Attachments__c</fullName>
        <label>No.of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>LeadQueue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>LeadQueue</label>
        <queue>LeadQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>test_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>test</label>
        <queue>test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>TestRecordType</fullName>
        <active>true</active>
        <businessProcess>LeadSrcTest</businessProcess>
        <label>TestRecordType</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>